[gd_scene load_steps=3 format=2]

[ext_resource path="res://conSetup.gd" type="Script" id=1]
[ext_resource path="res://resources/opensans_dynamic.tres" type="DynamicFont" id=2]

[node name="conSetup" type="Control"]
margin_left = 1.0
margin_right = 896.0
margin_bottom = 574.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblsaheader" type="Label" parent="."]
margin_left = 511.0
margin_top = 109.0
margin_right = 814.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "Stand Alone Games"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbljbheader" type="Label" parent="."]
margin_left = 129.0
margin_top = 109.0
margin_right = 432.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Pack Locations"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP1" type="Label" parent="."]
margin_left = 129.0
margin_top = 134.654
margin_right = 274.0
margin_bottom = 149.654
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP2" type="Label" parent="."]
margin_left = 131.0
margin_top = 234.0
margin_right = 276.0
margin_bottom = 249.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSAQuiplash" type="Label" parent="."]
margin_left = 509.0
margin_top = 135.0
margin_right = 654.0
margin_bottom = 155.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Quiplash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSAFibbageXL" type="Label" parent="."]
margin_left = 639.0
margin_top = 136.0
margin_right = 784.0
margin_bottom = 156.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Fibbage XL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSAQuiplash2" type="Label" parent="."]
margin_left = 510.0
margin_top = 205.0
margin_right = 655.0
margin_bottom = 225.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Quiplash 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSADrawful2" type="Label" parent="."]
margin_left = 639.0
margin_top = 206.0
margin_right = 784.0
margin_bottom = 226.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Drawful 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSAUYW" type="Label" parent="."]
margin_left = 509.0
margin_top = 272.0
margin_right = 654.0
margin_bottom = 292.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Use Your Words"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSAWTD" type="Label" parent="."]
margin_left = 639.0
margin_top = 273.0
margin_right = 784.0
margin_bottom = 293.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "What The Dub"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP3" type="Label" parent="."]
margin_left = 127.0
margin_top = 334.0
margin_right = 272.0
margin_bottom = 349.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP4" type="Label" parent="."]
margin_left = 127.0
margin_top = 437.0
margin_right = 272.0
margin_bottom = 452.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP5" type="Label" parent="."]
margin_left = 315.0
margin_top = 135.0
margin_right = 460.0
margin_bottom = 150.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP6" type="Label" parent="."]
margin_left = 315.0
margin_top = 234.0
margin_right = 460.0
margin_bottom = 249.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP7" type="Label" parent="."]
margin_left = 315.0
margin_top = 334.0
margin_right = 460.0
margin_bottom = 349.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblPP8" type="Label" parent="."]
margin_left = 315.0
margin_top = 437.0
margin_right = 460.0
margin_bottom = 452.0
custom_colors/font_color = Color( 1, 0.388235, 0.278431, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Jackbox Party Pack 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP1" type="Button" parent="."]
margin_left = 127.0
margin_top = 156.0
margin_right = 255.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP2" type="Button" parent="."]
margin_left = 127.0
margin_top = 255.0
margin_right = 255.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP3" type="Button" parent="."]
margin_left = 127.0
margin_top = 356.0
margin_right = 255.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP6" type="Button" parent="."]
margin_left = 315.0
margin_top = 256.0
margin_right = 443.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP5" type="Button" parent="."]
margin_left = 315.0
margin_top = 156.0
margin_right = 443.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP4" type="Button" parent="."]
margin_left = 127.0
margin_top = 459.0
margin_right = 255.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP7" type="Button" parent="."]
margin_left = 315.0
margin_top = 356.834
margin_right = 443.0
margin_bottom = 389.834
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdAuto" type="Button" parent="."]
margin_left = 512.0
margin_top = 445.0
margin_right = 692.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Attempt Auto Detect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSave" type="Button" parent="."]
margin_left = 512.0
margin_top = 501.0
margin_right = 692.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Save & Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdPP8" type="Button" parent="."]
margin_left = 315.0
margin_top = 458.834
margin_right = 443.0
margin_bottom = 491.834
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSAQuiplash" type="Button" parent="."]
margin_left = 511.0
margin_top = 157.0
margin_right = 602.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSAFibbageXL" type="Button" parent="."]
margin_left = 640.0
margin_top = 156.0
margin_right = 731.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSAQuiplash2" type="Button" parent="."]
margin_left = 512.0
margin_top = 225.0
margin_right = 603.0
margin_bottom = 257.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSADrawful2" type="Button" parent="."]
margin_left = 640.0
margin_top = 225.0
margin_right = 731.0
margin_bottom = 257.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSAUYW" type="Button" parent="."]
margin_left = 511.0
margin_top = 291.0
margin_right = 602.0
margin_bottom = 323.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSAWTD" type="Button" parent="."]
margin_left = 640.0
margin_top = 293.0
margin_right = 731.0
margin_bottom = 325.0
rect_pivot_offset = Vector2( 437.181, 101.829 )
custom_fonts/font = ExtResource( 2 )
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblHeader" type="Label" parent="."]
margin_left = 5.0
margin_top = 16.0
margin_right = 889.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Welcome to Jackbox Party Pack Patcher+ - The All-in-one Localization Patcher.
Please select the executable for each game you have installed below then Save to proceed.
Green titles mean it's a valid path."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP1" type="TextEdit" parent="."]
visible = false
margin_left = 156.0
margin_top = 156.173
margin_right = 196.0
margin_bottom = 196.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP2" type="TextEdit" parent="."]
visible = false
margin_left = 348.0
margin_top = 156.173
margin_right = 388.0
margin_bottom = 196.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP3" type="TextEdit" parent="."]
visible = false
margin_left = 532.0
margin_top = 156.173
margin_right = 572.0
margin_bottom = 196.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSAQuiplash" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSAFibbageXL" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSAQuiplash2" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSADrawful2" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSAWTD" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSAUYW" type="TextEdit" parent="."]
visible = false
margin_left = 756.0
margin_top = 388.173
margin_right = 796.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP6" type="TextEdit" parent="."]
visible = false
margin_left = 532.0
margin_top = 268.173
margin_right = 572.0
margin_bottom = 308.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP5" type="TextEdit" parent="."]
visible = false
margin_left = 348.0
margin_top = 268.173
margin_right = 388.0
margin_bottom = 308.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP4" type="TextEdit" parent="."]
visible = false
margin_left = 164.0
margin_top = 268.173
margin_right = 204.0
margin_bottom = 308.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP7" type="TextEdit" parent="."]
visible = false
margin_left = 156.0
margin_top = 388.173
margin_right = 196.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPP8" type="TextEdit" parent="."]
visible = false
margin_left = 348.0
margin_top = 388.173
margin_right = 388.0
margin_bottom = 428.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblScan" type="Label" parent="."]
margin_left = 127.0
margin_top = 527.0
margin_right = 167.0
margin_bottom = 542.0
custom_fonts/font = ExtResource( 2 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 87.381
margin_top = 67.0
margin_right = 944.381
margin_bottom = 509.0
custom_colors/file_icon_modulate = Color( 0.2, 0.639216, 0.811765, 1 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = ""
current_path = ""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbllanguage" type="Label" parent="."]
margin_left = 510.0
margin_top = 349.0
margin_right = 575.0
margin_bottom = 369.0
custom_fonts/font = ExtResource( 2 )
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optLang" type="OptionButton" parent="."]
margin_left = 511.0
margin_top = 375.0
margin_right = 691.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="ready" from="." to="." method="_on_conSetup_ready"]
[connection signal="pressed" from="cmdPP1" to="." method="_on_cmdPP1_pressed"]
[connection signal="pressed" from="cmdPP2" to="." method="_on_cmdPP2_pressed"]
[connection signal="pressed" from="cmdPP3" to="." method="_on_cmdPP3_pressed"]
[connection signal="pressed" from="cmdPP6" to="." method="_on_cmdPP6_pressed"]
[connection signal="pressed" from="cmdPP5" to="." method="_on_cmdPP5_pressed"]
[connection signal="pressed" from="cmdPP4" to="." method="_on_cmdPP4_pressed"]
[connection signal="pressed" from="cmdPP7" to="." method="_on_cmdPP7_pressed"]
[connection signal="pressed" from="cmdAuto" to="." method="_on_cmdAuto_pressed"]
[connection signal="pressed" from="cmdSave" to="." method="_on_cmdSave_pressed"]
[connection signal="pressed" from="cmdPP8" to="." method="_on_cmdPP8_pressed"]
[connection signal="pressed" from="cmdSAQuiplash" to="." method="_on_cmdSAQuiplash_pressed"]
[connection signal="pressed" from="cmdSAFibbageXL" to="." method="_on_cmdSAFibbageXL_pressed"]
[connection signal="pressed" from="cmdSAQuiplash2" to="." method="_on_cmdSAQuiplash2_pressed"]
[connection signal="pressed" from="cmdSADrawful2" to="." method="_on_cmdSADrawful2_pressed"]
[connection signal="pressed" from="cmdSAUYW" to="." method="_on_cmdSAUYW_pressed"]
[connection signal="pressed" from="cmdSAWTD" to="." method="_on_cmdSAWTD_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="item_selected" from="optLang" to="." method="_on_optLang_item_selected"]
